# db-template

./: .coveragerc  .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  apprunner.yaml  codecov.yml  docker-compose.yml  manage.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  security.yml
biodb/: __init__.py  asgi.py  routers.py  urls.py  util.py  wsgi.py
biodb/apps/catalog/: admin.py  apps.py  models.py
biodb/apps/catalog/migrations/: 0001_initial.py
biodb/apps/catalog/tests/: conftest.py  test_catalog_admin.py  test_datasets.py
biodb/apps/uploader/: admin.py  apps.py  base_models.py  charts.py  exporters.py  forms.py  io.py  loaddata.py  models.py  sql.py  urls.py  views.py
biodb/apps/uploader/fixtures/: arraymeasurementtypes.json  instruments.json  qcannotators.json  spectrameasurementtypes.json  test_data.json
biodb/apps/uploader/management/commands/: get_column_names.py  makesuperuser.py  prune_files.py  run_qc_annotators.py  send_test_email.py  update_sql_views.py
biodb/apps/uploader/migrations/: 0001_initial.py  0003_alter_biosample_freezing_time_and_more.py
biodb/apps/uploader/templates/: Home.html
biodb/apps/uploader/tests/: conftest.py  test_charts.py  test_exporters.py  test_io.py  test_management_commands.py  test_models.py  test_qc_models.py  test_sql.py  test_uploader_admin.py  test_views.py
biodb/apps/uploader/tests/data/: meta_data.csv  meta_data.jsonl  meta_data.xlsx  sample.jsonl  spectral_data.jsonl  spectral_data.xlsx
biodb/apps/user/: admin.py  apps.py  models.py
biodb/apps/user/fixtures/: centers.json
biodb/apps/user/migrations/: 0001_initial.py
biodb/apps/user/tests/: conftest.py  test_admin.py  test_center.py  test_user.py
biodb/qc/: qcfilter.py  qcmanager.py
biodb/qc/tests/: test_qc.py
biodb/settings/: aws.py  base.py  dev.py  prd.py
biospecdb/: __init__.py  routers.py  settings.py  urls.py  util.py
biospecdb/apps/catalog/: admin.py  models.py
biospecdb/apps/catalog/fixtures/: queries.json
biospecdb/apps/catalog/migrations/: 0001_initial.py
biospecdb/apps/catalog/tests/: conftest.py  test_catalog_admin.py  test_datasets.py
biospecdb/apps/dash/: example.py
biospecdb/apps/uploader/: admin.py  apps.py  base_models.py  charts.py  exporters.py  forms.py  io.py  loaddata.py  models.py  sql.py  urls.py  views.py
biospecdb/apps/uploader/fixtures/: biosampletypes.json  data_input_form.json  diseases.json  instruments.json  observables.json  qcannotators.json  sql_views.json  test_data.json  user_groups.json
biospecdb/apps/uploader/management/: run_qc_annotators.py
biospecdb/apps/uploader/management/commands/: get_column_names.py  makesuperuser.py  prune_files.py  run_qc_annotators.py  send_test_email.py  update_sql_views.py
biospecdb/apps/uploader/migrations/: 0001_initial.py  0002_alter_patient_patient_cid.py  0002_alter_visit_previous_visit.py  0002_remove_symptom_disease_remove_symptom_visit_and_more.py  0002_rename_biosampledata_biosample_and_more.py  0003_alter_visit_previous_visit.py  0003_uploadedfile.py  0004_alter_biosample_thawing_time.py  0004_alter_disease_value_class_alter_visit_patient_age.py  0005_alter_biosample_centrifuge_time_and_more.py  0005_alter_disease_value_class.py
biospecdb/apps/uploader/templates/: DataInputForm.html  DataInputForm_Failure.html  DataInputForm_Success.html  DataSearchForm.html  DataSearchForm_Failure.html  Home.html  MetadataDisplay.html  MetadataFileUpload.html  SpectradataFileUpload.html  UploadSuccess.html
biospecdb/apps/uploader/tests/: conftest.py  data_input_form.py  test_charts.py  test_exporters.py  test_forms.py  test_io.py  test_management_commands.py  test_models.py  test_qc_models.py  test_sql.py  test_uploader_admin.py  test_views.py
biospecdb/apps/uploader/tests/data/: meta_data.csv  meta_data.json  meta_data.jsonl  meta_data.xlsx  patients.json  sample.csv  sample.json  sample.jsonl  sample.xlsx  spectral_data.csv  spectral_data.json  spectral_data.jsonl  spectral_data.xlsx  visits.json
biospecdb/apps/user/: admin.py  models.py
biospecdb/apps/user/fixtures/: centers.json
biospecdb/apps/user/migrations/: 0001_initial.py  0002_remove_user_is_sqluser_user_is_sqluser_change_and_more.py  0003_alter_user_center.py
biospecdb/apps/user/tests/: test_admin.py  test_center.py
biospecdb/qc/: qcfilter.py  qcmanager.py
biospecdb/qc/tests/: test_qc.py
biospecdb/settings/: aws.py  base.py  prd.py
config/gunicorn/: dev.py  prd.py
docs/source/: accounts.rst  api.rst  api_catalog.rst  api_data.rst  api_explorer.rst  api_io.rst  api_user.rst  api_utility.rst  conf.py  data_collection.rst  datasets.rst  deploy.rst  index.rst  install.rst  management.rst  sql_explorer.rst  usage.rst
githooks/: pre-commit  pre-push
nginx/: Dockerfile  nginx.conf
notebooks/: flattened_view.ipynb
requirements/: build.txt  dev.txt  docs.txt  prd.txt  test.txt
scripts/dev/: rebuild_db.sh  rebuild_postgres.sh  rebuild_sqlite.sh
scripts/prd/: deploy.sh  ec2_init.sh  export_secrets.sh  gen_secret_key.sh
tests/: test_health_check.py  test_qc.py  test_util.py  test_version.py
